--- a/public/static/css/recog.css
+++ b/public/static/css/recog.css
@@ -21,12 +21,11 @@ body {
 }
 
 #span-res {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    padding-left: 0%;
-    width: 120%;
+    padding: 0px;
+    margin: 0px;
+    width: auto;
+    /* width: 120%; */
     font-size:  10em;
-    margin:0;
     display : inline-block;
     white-space : nowrap;
     overflow: visible;
